[gd_scene load_steps=7 format=3 uid="uid://c6lmqt5q5ecrw"]

[ext_resource type="Theme" uid="uid://cgfdgl4ihd081" path="res://assets/themes/td_theme.tres" id="1_rkel8"]
[ext_resource type="Texture2D" uid="uid://dkea4bvxyit85" path="res://interfaces/UI/menu/assets/textures/title.png" id="2_6rqf5"]
[ext_resource type="Script" path="res://interfaces/UI/menu/menu.gd" id="2_wpuev"]
[ext_resource type="Texture2D" uid="uid://xovv4wa0ovh6" path="res://interfaces/UI/menu/assets/textures/cover_notitles_cropped.jpg" id="3_nru1f"]
[ext_resource type="Texture2D" uid="uid://fdakrslesf3i" path="res://interfaces/UI/menu/assets/textures/mouse_diagram.png" id="4_25h13"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_27cet"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_rkel8")
script = ExtResource("2_wpuev")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_nru1f")
expand_mode = 1

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -468.0
offset_top = -286.0
offset_right = 468.0
offset_bottom = 286.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_layout_mode = 1

[node name="Sections" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="TextureRect" parent="PanelContainer/Sections"]
layout_mode = 2
size_flags_vertical = 6
size_flags_stretch_ratio = 0.75
texture = ExtResource("2_6rqf5")
stretch_mode = 5

[node name="Start" type="Button" parent="PanelContainer/Sections"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
size_flags_stretch_ratio = 0.25
theme_override_font_sizes/font_size = 42
text = "   START   "

[node name="HowToPlay" type="Button" parent="PanelContainer/Sections"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
size_flags_stretch_ratio = 0.25
theme_override_font_sizes/font_size = 42
text = "  HOW TO PLAY  "

[node name="Quit" type="Button" parent="PanelContainer/Sections"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
size_flags_stretch_ratio = 0.25
theme_override_font_sizes/font_size = 42
text = "   QUIT   "

[node name="HowToPlay" type="Panel" parent="."]
visible = false
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -416.0
offset_top = -291.0
offset_right = 416.0
offset_bottom = 291.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sections" type="VBoxContainer" parent="HowToPlay"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -278.0
offset_top = -240.0
offset_right = 283.0
offset_bottom = 241.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="HowToPlay/Sections"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxEmpty_27cet")
text = "How To Play"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Objective" type="VBoxContainer" parent="HowToPlay/Sections"]
layout_mode = 2
size_flags_vertical = 3

[node name="Title" type="Label" parent="HowToPlay/Sections/Objective"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxEmpty_27cet")
text = "Objective:"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Description" type="Label" parent="HowToPlay/Sections/Objective"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxEmpty_27cet")
text = "Defend the outpost from incoming enemies"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Controls" type="VBoxContainer" parent="HowToPlay/Sections"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="Title" type="Label" parent="HowToPlay/Sections/Controls"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxEmpty_27cet")
text = "Controls:"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Description" type="HBoxContainer" parent="HowToPlay/Sections/Controls"]
layout_mode = 2

[node name="MouseImg" type="TextureRect" parent="HowToPlay/Sections/Controls/Description"]
layout_mode = 2
texture = ExtResource("4_25h13")

[node name="Labels" type="Control" parent="HowToPlay/Sections/Controls/Description"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Select" type="Label" parent="HowToPlay/Sections/Controls/Description/Labels"]
layout_mode = 0
offset_top = 47.0
offset_right = 265.0
offset_bottom = 66.0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxEmpty_27cet")
text = "Select"
vertical_alignment = 1
uppercase = true

[node name="MoveCamera" type="Label" parent="HowToPlay/Sections/Controls/Description/Labels"]
layout_mode = 0
offset_top = 87.0
offset_right = 265.0
offset_bottom = 106.0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxEmpty_27cet")
text = "Move camera (click and drag)"
vertical_alignment = 1
uppercase = true

[node name="Zoom" type="Label" parent="HowToPlay/Sections/Controls/Description/Labels"]
layout_mode = 0
offset_top = 131.0
offset_right = 265.0
offset_bottom = 150.0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxEmpty_27cet")
text = "Zoom (scroll)"
vertical_alignment = 1
uppercase = true

[node name="Esc" type="Label" parent="HowToPlay/Sections/Controls/Description/Labels"]
layout_mode = 0
offset_left = 1.5
offset_top = 122.0
offset_right = 266.5
offset_bottom = 293.0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxEmpty_27cet")
text = "ESC to pause"
vertical_alignment = 1
uppercase = true

[node name="Back" type="Button" parent="HowToPlay/Sections/Controls"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
size_flags_stretch_ratio = 0.25
theme_override_font_sizes/font_size = 32
text = "  BACK  "

[connection signal="pressed" from="PanelContainer/Sections/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="PanelContainer/Sections/HowToPlay" to="." method="_on_how_to_play_pressed"]
[connection signal="pressed" from="PanelContainer/Sections/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="HowToPlay/Sections/Controls/Back" to="." method="_on_back_pressed"]
